unpackaged/main/default/objects/Customer_Invoice_Payment__c/Customer_Invoice_Payment__c.object-meta.xml
<CustomObject>
    <label>Customer Invoice Payment</label>
    <nameField>
        <displayFormat>CIP-{000000}</displayFormat>
        <label>Customer Invoice Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>