unpackaged/main/default/objects/Customer_Invoice_Payment__c/fields/Amount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Amount_Applied__c</fullName>
    <label>Amount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>