unpackaged/main/default/objects/Customer_Invoice_Payment__c/fields/Created_By_Automation__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flags whether or not this Record was created by Automation</inlineHelpText>
    <label>Created By Automation</label>
    <type>Checkbox</type>
</CustomField>