unpackaged/main/default/objects/Customer_Invoice_Payment__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo</label>
    <referenceTo>Manual_Credit_Memo__c</referenceTo>
    <relationshipLabel>Customer Invoice Payments</relationshipLabel>
    <relationshipName>Customer_Invoice_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>