unpackaged/main/default/objects/Customer_Invoice_Payment__c/fields/Customer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice__c</fullName>
    <label>Customer Invoice</label>
    <referenceTo>varcpq__Invoice__c</referenceTo>
    <relationshipLabel>Customer Invoice Payments</relationshipLabel>
    <relationshipName>Customer_Invoice_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>