unpackaged/main/default/objects/Customer_Invoice_Payment__c/fields/Date_Payment_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Payment_Entered__c</fullName>
    <label>Date Payment Entered</label>
    <type>DateTime</type>
</CustomField>