unpackaged/main/default/objects/Customer_Invoice_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Credit_Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>