unpackaged/main/default/objects/Customer_Invoice_Payment__c/fields/SourceID__c.field-meta.xml
<CustomField>
    <fullName>SourceID__c</fullName>
    <label>SourceID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>